ISIS-3041: update doc index

--- a/antora/components/refguide-index/modules/applib/pages/index/Identifier.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/Identifier.adoc
@@ -12,7 +12,8 @@ For xref:refguide:applib:index/Identifier.adoc[Identifier] (s) of type _Identifi
 ----
 class Identifier {
   Identifier classIdentifier(LogicalType typeIdentifier)
-  Identifier propertyOrCollectionIdentifier(LogicalType typeIdentifier, String propertyOrCollectionName)
+  Identifier propertyIdentifier(LogicalType typeIdentifier, String propertyOrCollectionName)
+  Identifier collectionIdentifier(LogicalType typeIdentifier, String propertyOrCollectionName)
   Identifier methodIdentifier(LogicalType typeIdentifier, Method method)     // <.>
   Identifier actionIdentifier(LogicalType typeIdentifier, String actionName, Class<?>... parameterClasses)
   Identifier actionIdentifier(LogicalType typeIdentifier, String actionName, Can<String> parameterClassNames)
