--- a/antora/components/refguide-index/modules/applib/pages/index/services/commanddto/HasCommandDto.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/commanddto/HasCommandDto.adoc
@@ -9,7 +9,7 @@ Objects implementing this interface will be processed automatically by _org.apac
 .HasCommandDto.java
 ----
 interface HasCommandDto {
-  CommandDto getCommandDto()
+  org.apache.isis.schema.cmd.v2.CommandDto getCommandDto()
 }
 ----
 
