--- a/antora/components/refguide-index/modules/testing/pages/index/fixtures/applib/setup/PersonaEnumPersistAll.adoc
+++ b/antora/components/refguide-index/modules/testing/pages/index/fixtures/applib/setup/PersonaEnumPersistAll.adoc
@@ -6,7 +6,7 @@
 [source,java]
 .PersonaEnumPersistAll.java
 ----
-class PersonaEnumPersistAll<E, T> {
+class PersonaEnumPersistAll<T, E, B> {
   PersonaEnumPersistAll(Class<E> personaEnumClass)
   Integer getNumber()
   void setNumber(Integer number)
