--- a/antora/components/refguide-index/modules/applib/pages/index/annotation/Value.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/annotation/Value.adoc
@@ -9,13 +9,21 @@ Indicates that the class has value semantics.
 .Value.java
 ----
 @interface Value {
-  String logicalTypeName() default "";     // <.>
+  @Deprecated(forRemoval = true, since = "2.0.0-M8")
+String logicalTypeName() default "";     // <.>
 }
 ----
 
 <.> xref:#logicalTypeName[logicalTypeName]
 +
 --
+[WARNING]
+====
+[red]#_deprecated:_#
+
+use _Named_ instead
+====
+
 The logical name of this value's type, that uniquely and fully qualifies it. The logical name is analogous to - but independent of - the actual fully qualified class name. eg. _sales.Customer_ for a class 'org.mycompany.dom.Customer'
 --
 
@@ -23,6 +31,13 @@ The logical name of this value's type, that uniquely and fully qualifies it. The
 
 [#logicalTypeName]
 === logicalTypeName
+
+[WARNING]
+====
+[red]#_deprecated:_#
+
+use _Named_ instead
+====
 
 The logical name of this value's type, that uniquely and fully qualifies it. The logical name is analogous to - but independent of - the actual fully qualified class name. eg. _sales.Customer_ for a class 'org.mycompany.dom.Customer'
 
