--- a/antora/components/refguide-index/modules/applib/pages/index/services/session/SessionLogService.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/services/session/SessionLogService.adoc
@@ -1,18 +1,29 @@
-= PdfJsViewerAdvisor _(interface)_
+= SessionLogService _(interface)_
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-SPI service interface.
+Defines an API to track the status of the current sessions ("users logged on") on the system.
+
+Multiple implementations can be registered; all will be called.
 
 == API
 
 [source,java]
-.PdfJsViewerAdvisor.java
+.SessionLogService.java
 ----
-interface PdfJsViewerAdvisor {
-  Advice advise(InstanceKey instanceKey)
-  void pageNumChangedTo(InstanceKey instanceKey, int pageNum)
-  void scaleChangedTo(InstanceKey instanceKey, Scale scale)
-  void heightChangedTo(InstanceKey instanceKey, int height)
+interface SessionLogService {
+  void log(Type type, String username, Date date, CausedBy causedBy, UUID sessionGuid, String httpSessionId)     // <.>
 }
 ----
 
+<.> xref:#log__Type_String_Date_CausedBy_UUID_String[log(Type, String, Date, CausedBy, UUID, String)]
++
+--
+Callback to log the session.
+--
+
+== Members
+
+[#log__Type_String_Date_CausedBy_UUID_String]
+=== log(Type, String, Date, CausedBy, UUID, String)
+
+Callback to log the session.
