--- a/antora/components/refguide-index/modules/applib/pages/index/value/Markup.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/value/Markup.adoc
@@ -14,6 +14,7 @@ class Markup {
   Markup valueOf(String html)
   String asHtml()
   String toString()
+  String summarizeHtmlAsTitle(String html)
 }
 ----
 
