--- a/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/contributions/Object_recentCommands.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandlog/applib/contributions/Object_recentCommands.adoc
@@ -1,27 +1,28 @@
-= @LogicalTypeName
+= Object_recentCommands
 :Notice: Licensed to the Apache Software Foundation (ASF) under one or more contributor license agreements. See the NOTICE file distributed with this work for additional information regarding copyright ownership. The ASF licenses this file to you under the Apache License, Version 2.0 (the "License"); you may not use this file except in compliance with the License. You may obtain a copy of the License at. http://www.apache.org/licenses/LICENSE-2.0 . Unless required by applicable law or agreed to in writing, software distributed under the License is distributed on an "AS IS" BASIS, WITHOUT WARRANTIES OR  CONDITIONS OF ANY KIND, either express or implied. See the License for the specific language governing permissions and limitations under the License.
 
-Introduced to allow for abstract types to be mapped to a logical-type-name, for the security model to apply permission checks against.
+This mixin contributes a `recentCommands` action to any domain object (unless also xref:refguide:applib:index/mixins/system/HasInteractionId.adoc[HasInteractionId] - commands don't themselves have commands).
 
 == API
 
 [source,java]
-.LogicalTypeName.java
+.Object_recentCommands.java
 ----
-@interface LogicalTypeName {
-  String value() default "";     // <.>
+class Object_recentCommands {
+  List<CommandLogEntry> act()
+  boolean hideAct()     // <.>
 }
 ----
 
-<.> xref:#value[value]
+<.> xref:#hideAct__[hideAct()]
 +
 --
-If unspecified, the fully-qualified class name is used instead.
+Hide if the mixee is itself xref:refguide:applib:index/mixins/system/HasInteractionId.adoc[HasInteractionId] (commands don't have commands).
 --
 
 == Members
 
-[#value]
-=== value
+[#hideAct__]
+=== hideAct()
 
-If unspecified, the fully-qualified class name is used instead.
+Hide if the mixee is itself xref:refguide:applib:index/mixins/system/HasInteractionId.adoc[HasInteractionId] (commands don't have commands).
