--- a/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/analyser/CommandReplayAnalyserResult.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/analyser/CommandReplayAnalyserResult.adoc
@@ -8,7 +8,7 @@
 ----
 class CommandReplayAnalyserResult {
   void init()
-  String analyzeReplay(ICommandLog commandLog)
+  String analyzeReplay(CommandLogEntry commandLogEntry)
 }
 ----
 
