--- a/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/fetch/CommandFetcher.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/commandreplay/secondary/fetch/CommandFetcher.adoc
@@ -8,12 +8,12 @@
 ----
 class CommandFetcher {
   CommandFetcher(SecondaryConfig secondaryConfig)
-  Can<CommandDto> fetchCommand(ICommandLog previousHwmIfAny)     // <.>
+  Can<CommandDto> fetchCommand(CommandLogEntry previousHwmIfAny)     // <.>
   Can<CommandDto> callPrimary(UUID interactionId)
 }
 ----
 
-<.> xref:#fetchCommand__ICommandLog[fetchCommand(ICommandLog)]
+<.> xref:#fetchCommand__CommandLogEntry[fetchCommand(CommandLogEntry)]
 +
 --
 Replicates a single command.
@@ -21,7 +21,7 @@ Replicates a single command.
 
 == Members
 
-[#fetchCommand__ICommandLog]
-=== fetchCommand(ICommandLog)
+[#fetchCommand__CommandLogEntry]
+=== fetchCommand(CommandLogEntry)
 
 Replicates a single command.
