--- a/antora/components/refguide-index/modules/extensions/pages/index/secman/applib/tenancy/dom/ApplicationTenancy.adoc
+++ b/antora/components/refguide-index/modules/extensions/pages/index/secman/applib/tenancy/dom/ApplicationTenancy.adoc
@@ -8,9 +8,8 @@
 ----
 class ApplicationTenancy {
   public static final String LOGICAL_TYPE_NAME;
-  public static final String NAMED_QUERY_FIND_BY_NAME;
-  public static final String NAMED_QUERY_FIND_BY_PATH;
-  public static final String NAMED_QUERY_FIND_BY_NAME_OR_PATH_MATCHING;
+  public static final String SCHEMA;
+  public static final String TABLE;
   String title()
   boolean isRoot()
   int compareTo(org.apache.isis.extensions.secman.applib.tenancy.dom.ApplicationTenancy other)
