--- a/antora/components/userguide/modules/fun/pages/concepts-patterns/metamodel.adoc
+++ b/antora/components/userguide/modules/fun/pages/concepts-patterns/metamodel.adoc
@@ -17,7 +17,7 @@ Most of the annotations recognized by the framework are defined by the Apache Is
 For example the `@Title` annotation -- which identifies how the framework should derive a human-readable label for each rendered domain object -- is part of the `org.apache.isis.applib.annotations` package.
 However the framework also recognizes certain other JEE annotations such as `@javax.inject.Inject` (used for dependency injection).
 
-The framework integrates an ORM for persistence, specifically DataNucleus and the JDO API (there is a roadmap to also support JPA with other persistence implementations).
+The framework integrates an ORM for persistence, specifically DataNucleus and the JDO API and since version 2.0.0, JPA (Eclipselink) is supported as well.
 Both JDO and JPA can map to both relational databases and also to various NoSQL objectstores such as MongoDB or Neo4J.
 Apache Isis recognizes a number of these persistence-specific annotations, for example `@javax.jdo.annotations.Column(allowsNull=...)`.
 
