--- a/antora/components/docs/modules/resources/pages/eventbus_ui.adoc
+++ b/antora/components/docs/modules/resources/pages/eventbus_ui.adoc
@@ -1,6 +1,6 @@
-# eventbus_terminology
-.eventbus_terminology
-[plantuml,file="eventbus_terminology.png"]
+# eventbus_ui
+.eventbus_ui
+[plantuml,file="eventbus_ui.png"]
 --
 @startuml
 
