--- a/antora/components/refguide-index/modules/applib/pages/index/events/domain/ActionDomainEvent.adoc
+++ b/antora/components/refguide-index/modules/applib/pages/index/events/domain/ActionDomainEvent.adoc
@@ -37,7 +37,10 @@ Subtypes can define a no-arg constructor; the framework sets state via (non-API)
 <.> xref:#ActionDomainEvent__S[ActionDomainEvent(S)]
 +
 --
-Subtypes can define a one-arg constructor (for nested non-static classes of nested non-static mixins); the framework sets state via (non-API) setters.
+Subtypes can define a one-arg constructor; the framework sets state via (non-API) setters.
+This is useful where the domain event is declared in a mixin, which itself is nested as a non-static class within a parent type.
+In such a case the Java compiler implicitly adds a one-arg constructor of the parent type to the mixin, which means that the mixin contributes to its parent.
+The domain event defined within the mixin must also be non-static, and the compiler will again implicit add a one-arg constructor taking the mixin instance as its source.
 --
 <.> xref:#setReturnValue__Object[setReturnValue(Object)]
 +
@@ -54,12 +57,18 @@ Set by the framework.
 [#ActionDomainEvent__]
 === ActionDomainEvent()
 
-Subtypes can define a no-arg constructor; the framework sets state via (non-API) setters.
+Subtypes can define a one-arg constructor; the framework sets state via (non-API) setters.
+This is useful where the domain event is declared in a mixin, which itself is nested as a non-static class within a parent type.
+In such a case the Java compiler implicitly adds a one-arg constructor of the parent type to the mixin, which means that the mixin contributes to its parent.
+The domain event defined within the mixin must also be non-static, and the compiler will again implicit add a one-arg constructor taking the mixin instance as its source.
 
 [#ActionDomainEvent__S]
 === ActionDomainEvent(S)
 
-Subtypes can define a one-arg constructor (for nested non-static classes of nested non-static mixins); the framework sets state via (non-API) setters.
+Subtypes can define a one-arg constructor; the framework sets state via (non-API) setters.
+This is useful where the domain event is declared in a mixin, which itself is nested as a non-static class within a parent type.
+In such a case the Java compiler implicitly adds a one-arg constructor of the parent type to the mixin, which means that the mixin contributes to its parent.
+The domain event defined within the mixin must also be non-static, and the compiler will again implicit add a one-arg constructor taking the mixin instance as its source.
 
 [#setReturnValue__Object]
 === setReturnValue(Object)
